--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!doctype html>
-<html>
+<html lang="nl">
     <head>
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         
-        <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1, minimal-ui">
+        <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
         <meta name="apple-mobile-web-app-capable" content="yes" />
 
+        <meta name="theme-color" content="#00b1bd"/>
+
+        <link rel="manifest" href="/static/manifest.json">
         <link rel="icon" href="/static/meta/favicon.ico">
         <link rel="apple-touch-icon" sizes="57x57" href="/static/meta/apple-icon-57x57.png">
         <link rel="apple-touch-icon" sizes="60x60" href="/static/meta/apple-icon-60x60.png">
@@ -22,7 +25,6 @@
         <link rel="icon" type="image/png" sizes="16x16" href="/static/meta/favicon-16x16.png">
         <meta name="msapplication-TileColor" content="#00b1bd">
         <meta name="msapplication-TileImage" content="/static/meta/ms-icon-144x144.png">
-        <meta name="theme-color" content="#00b1bd">
 
         <meta property="og:type"               content="website" />
         <meta property="og:title"              content="Valparaiso" />
@@ -36,7 +38,7 @@
         <title>Valparaiso</title>
     </head>
     <body>
-        <div id="app"></div>
+        <div id="site"></div>
         <!-- built files will be auto injected -->
     </body>
 </html>
